PAPER_APP_ANDROID/app/src/main/java/com/example/newspaper_tracking_system/View_profile_paperboy.java
package com.example.newspaper_tracking_system;

import androidx.appcompat.app.AppCompatActivity;

import android.content.SharedPreferences;
import android.os.Bundle;
import android.preference.PreferenceManager;
import android.widget.ImageView;
import android.widget.TextView;
import android.widget.Toast;

import com.android.volley.DefaultRetryPolicy;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;
import com.squareup.picasso.MemoryPolicy;
import com.squareup.picasso.NetworkPolicy;
import com.squareup.picasso.Picasso;

import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class View_profile_paperboy extends AppCompatActivity {
    ImageView img;
    TextView t1,t2,t3,t4;
    SharedPreferences sh;
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
            setContentView(R.layout.activity_view_profile_paperboy);
            img=(ImageView)findViewById(R.id.imageView5);
            t1=(TextView)findViewById(R.id.name);
            t2=(TextView)findViewById(R.id.place);
            t3=(TextView)findViewById(R.id.phone);
            t4=(TextView)findViewById(R.id.emil);


            sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
            String ip = sh.getString("ip", "");
            String url = "http://" + ip + ":5000/and_paper_boy_view_profile";


            RequestQueue requestQueue = Volley.newRequestQueue(getApplicationContext());
            StringRequest postRequest = new StringRequest(Request.Method.POST, url,

                    new Response.Listener<String>() {

                        @Override
                        public void onResponse(String response) {

                            try {
                                JSONObject jsonObj = new JSONObject(response);
                                if (jsonObj.getString("status").equalsIgnoreCase("ok")) {

                                    t1.setText("Name : "+jsonObj.getString("boy_name"));
                                    t2.setText("Place : "+jsonObj.getString("boy_place"));
                                    t3.setText("Phone : "+jsonObj.getString("boy_contact_no"));
                                    t4.setText("Email : "+jsonObj.getString("boy_email_id"));


                                    try
                                    {
                                        String url1="http://"+sh.getString("ip","")+":5000"+jsonObj.getString("boy_image");
                                        Picasso.with(View_profile_paperboy.this).load(url1.toString()).memoryPolicy(MemoryPolicy.NO_CACHE).networkPolicy(NetworkPolicy.NO_CACHE).transform(new CircleTransform()).error(R.drawable.ic_menu_gallery).into(img);

                                    }catch (Exception e)
                                    {
                                        Toast.makeText(View_profile_paperboy.this, e.toString(), Toast.LENGTH_SHORT).show();
                                    }




                                } else {
                                    Toast.makeText(getApplicationContext(), "Invalid user", Toast.LENGTH_LONG).show();
                                }

                            } catch (Exception e) {
                                Toast.makeText(getApplicationContext(), "Error" + e.getMessage().toString(), Toast.LENGTH_SHORT).show();
                            }
                        }
                    },
                    new Response.ErrorListener() {
                        @Override
                        public void onErrorResponse(VolleyError error) {
                            // error
                            Toast.makeText(getApplicationContext(), "eeeee" + error.toString(), Toast.LENGTH_SHORT).show();
                        }
                    }
            ) {
                @Override
                protected Map<String, String> getParams() {
                    SharedPreferences sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
                    Map<String, String> params = new HashMap<String, String>();


                    params.put("lid", sh.getString("lid",""));


                    return params;
                }
            };

            int MY_SOCKET_TIMEOUT_MS = 100000;

            postRequest.setRetryPolicy(new DefaultRetryPolicy(
                    MY_SOCKET_TIMEOUT_MS,
                    DefaultRetryPolicy.DEFAULT_MAX_RETRIES,
                    DefaultRetryPolicy.DEFAULT_BACKOFF_MULT));
            requestQueue.add(postRequest);
        }
    }


